--- a/features/home/src/main/AndroidManifest.xml
+++ b/features/home/src/main/AndroidManifest.xml
@@ -1,9 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pl.sose1.home">
-
-    <application>
-        <activity android:name=".createLobby.CreateLobbyActivity"></activity>
-    </application>
-
+<manifest package="pl.sose1.home">
 </manifest>
