--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:xlargeScreens="true"/>
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -15,13 +22,14 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/MyTheme"
         tool:replace="android:allowBackup">
-        <activity android:name="pl.sose1.home.HomeActivity">
+        <activity android:name="pl.sose1.home.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="pl.sose1.home.HomeActivity"></activity>
     </application>
 
 </manifest>
