--- a/features/home/src/main/AndroidManifest.xml
+++ b/features/home/src/main/AndroidManifest.xml
@@ -1,3 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="pl.sose1.home">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="pl.sose1.home">
+
+    <application>
+        <activity android:name=".SplashActivity"></activity>
+        <activity android:name=".HomeActivity"></activity>
+    </application>
+
 </manifest>
