+ added Simple PaintingView.kt, chat section

--- a/features/game/src/main/AndroidManifest.xml
+++ b/features/game/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application>
         <activity
             android:name=".GameActivity"
-            android:label="@string/game_code" />
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
