--- a/features/game/src/main/AndroidManifest.xml
+++ b/features/game/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <application>
         <activity
             android:name=".GameActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"/>
     </application>
 
 </manifest>
